# denemo

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Default.commands  Info.plist  LICENSE_OFL.txt  Makefile.am  NEWS  README  README.Win32  README.feature-captain-hook  README.feature-guile-loadpath  README.lilypond  README.md  appdata.xml  autogen.sh  ciabot.py  ciabot.sh  configure.ac  configure.in  denemo.appdata.xml.in  denemo.conf  denemo.spec.in  denemo_file_update.sh  denemorc.xml  guile-1.8.pc  maketest.sh  org.denemo.Denemo.appdata.xml.in  runtests.sh
doc/images/: Makefile  Makefile.am  Makefile.in
docs/images/: Makefile.am
examples/: AbbreviatedNotes.denemo  AllFeaturesExplained.denemo  AllTitles.denemo  BaroqueLuteTab.denemo  CautionaryAccidental.denemo  ChordDiagrams.denemo  CollapsingSystems.denemo  CrescendoHalfWay.denemo  Cues.denemo  DivisiStaff.denemo  ForcingBreaks.denemo  GraceLilyPondBugWorkaround.denemo  HandWrittenSlurs.denemo  HandelFiguredBassExercises.denemo  IndependentChordSymbols.denemo  InstrumentNames.denemo  KeyboardPolyphony.denemo  LeadSheet.denemo  LeadSheetNamedChordSymbols.denemo  LyricsAboveAndBelowStaff.denemo  Makefile.am  Metronome.denemo  MultiMeasureRests.denemo  Ossia.denemo  PlayFromTwoOrganStops.denemo  PrintScoreAndParts.denemo  RaggedBottom.denemo  RehearsalMarks.denemo  ReminderAccidental.denemo  SeveralVerses.denemo  SuggestedAccidental.denemo  TemperamentShiftingPlayback.denemo  TextPosition.denemo  Upbeat.denemo  chordInRepeat.ly  editTwovoices.ly  figuredBassTemplate.ly  headers.ly  partial.ly  repeat_grace.ly  (+2 more)
libsmf/: Makefile.am  Makefile.in  smf.c  smf.h  smf_decode.c  smf_load.c  smf_private.h  smf_save.c  smf_tempo.c  smfsh.c
pixmaps/: .#Makefile.in.1.1  Makefile  Makefile.am  Makefile.in  denemo  denemo.desktop  feta26-accidentals--1.xbm  feta26-accidentals--2.xbm  feta26-accidentals-0.xbm  feta26-accidentals-1.xbm  feta26-accidentals-2.xbm  feta26-accidentals-leftparen.xbm  feta26-accidentals-rightparen.xbm  feta26-clefs-alto.xbm  feta26-clefs-alto_change.xbm  feta26-clefs-bass.xbm  feta26-clefs-bass_change.xbm  feta26-clefs-g_8.xbm  feta26-clefs-treble.xbm  feta26-clefs-treble_change.xbm  feta26-dots-dot.xbm  feta26-dots-repeatcolon.xbm  feta26-flags-d3.xbm  feta26-flags-d4.xbm  feta26-flags-d5.xbm  feta26-flags-d6.xbm  feta26-flags-dgrace.xbm  feta26-flags-u3.xbm  feta26-flags-u4.xbm  feta26-flags-u5.xbm  feta26-flags-u6.xbm  feta26-flags-ugrace.xbm  feta26-noteheads--1.xbm  feta26-noteheads--2.xbm  feta26-noteheads-0.xbm  feta26-noteheads-0diamond.xbm  feta26-noteheads-1.xbm  feta26-noteheads-1diamond.xbm  feta26-noteheads-2.xbm  feta26-noteheads-2cross.xbm  (+72 more)
pixmaps/CVS/: Entries  Repository
plugins/niff/: Makefile.am  chunks.c  clt.c  error.c  exportniff.c  exportniff.h  fcc.c  inherit.c  names.c  nfile.c  niffexporter.c  parse.c  register.c  rfile.c  rwbytes.c  rwniff.c  rwtypes.c  stbl.c  stdcriff.c  storenif.c  table.c  tags.c  tcbtable.c
portmidi/: Makefile.am
portmidi/pm_linux/: Makefile.am
portmidi/pm_mac/: Makefile.am
portmidi/pm_win/: Makefile.am
src/: .#Makefile.am.1.5  .#importmidi.c.1.4  .#importmidi.h.1.3  .#pitchentry.c.1.1  .#pitchentry.h.1.1  .#playback.h.1.3  .#scorewizard.c.1.2  .#utils.h.1.4  .kbd-interface.c.swp  .swp  Makefile  Makefile.am  Makefile.in  NOTES  README.md  a.out  alsabackend.c  alsabackend.h  alsaplayback.c  alsaplayback.h  alsaseq.c  alsaseq.h  articulations.c  articulations.h  audio.h  audiobackend.c  audiobackend.h  audiocapture.c  audiofile.c  audiofile.h  audiointerface.c  audiointerface.h  barline.c  barline.h  binreloc.c  binreloc.h  bookmarks.c  bookmarks.h  calculatepositions.c  calculatepositions.h  (+238 more)
src/.deps/: alsaplayback.Plo  alsaplayback.Po  alsaseq.Plo  alsaseq.Po  articulations.Plo  articulations.Po  audiocapture.Po  barline.Plo  barline.Po  binreloc.Plo  binreloc.Po  bookmarks.Plo  bookmarks.Po  calculatepositions.Plo  calculatepositions.Po  changenotehead.Plo  changenotehead.Po  chordops.Plo  chordops.Po  clefdialog.Plo  clefdialog.Po  commandfuncs.Plo  commandfuncs.Po  contexts.Plo  contexts.Po  csoundplayback.Plo  csoundplayback.Po  draw.Plo  draw.Po  drawaccidentals.Plo  drawaccidentals.Po  drawbarline.Plo  drawbarline.Po  drawclefs.Plo  drawclefs.Po  drawcursor.Plo  drawcursor.Po  drawdynamic.Plo  drawdynamic.Po  drawfakechord.Plo  (+141 more)
src/CVS/: Entries  Repository
src/audio/: alsabackend.c  alsabackend.h  audio.h  audiocapture.c  audiocapture.h  audiointerface.c  audiointerface.h  dummybackend.c  dummybackend.h  eventqueue.c  eventqueue.h  fluid.c  fluid.h  instrumentname.c  instrumentname.h  jackbackend.c  jackbackend.h  jackutil.c  midi.c  midi.h  midirecord.c  midirecord.h  parseinstruments.c  parseinstruments.h  pitchentry.c  pitchentry.h  pitchrecog.c  playback.c  playback.h  portaudiobackend.c  portaudiobackend.h  portaudioutil.c  portmidibackend.c  portmidibackend.h  portmidiutil.c  ringbuffer.c  ringbuffer.h
src/command/: changenotehead.c  changenotehead.h  chord.c  chord.h  chordops.c  chordops.h  clef.c  clef.h  commandfuncs.c  commandfuncs.h  contexts.c  contexts.h  fakechord.c  fakechord.h  figure.c  figure.h  grace.c  grace.h  graceops.c  graceops.h  keyresponses.c  keyresponses.h  keysig.c  keysig.h  lilydirectives.c  lilydirectives.h  lyric.c  lyric.h  measure.c  measure.h  measureops.c  measureops.h  object.c  object.h  objops.c  objops.h  processstaffname.c  processstaffname.h  score.c  score.h  (+17 more)
src/core/: binreloc.c  binreloc.h  cache.c  cache.h  denemo_types.c  entries.h  exportxml.c  exportxml.h  external.c  graphicseditor.c  graphicseditor.h  http.c  http.h  importxml.c  importxml.h  kbd-custom.c  kbd-custom.h  keyboard.c  keyboard.h  keymapio.c  keymapio.h  main.c  menusystem.c  menusystem.h  palettestorage.c  palettestorage.h  preferences.c  preferences.h  (+6 more)
tests/: Makefile.am  README.md  common.c  common.h  coverage.c  integration.c  unit.c
tools/: Makefile.am  annotator.c  cairo_svg2path.c  denemo_file_update  extract_all.sh  extract_scheme.c  generate_source.c  menu.c  pageswitcher.c  pageturner.c  twopageturner.c
(+4411 files in other folders)
